--- a/style.css
+++ b/style.css
@@ -1,38 +1,117 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
   }
   
   h1 {
     text-align: center;
+    font-size: 2rem;
+  }
+  
+  h2 {
+    margin-top: 3px;
   }
   
   form {
-    max-width: 300px;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
   }
   
   label {
-    display: block;
-    margin-top: 10px;
+    margin-bottom: 5px;
   }
   
-  input, select {
-    width: 100%;
+  input[type="date"],
+  input[type="number"],
+  select {
+    margin-bottom: 15px;
     padding: 5px;
-    margin-top: 5px;
   }
   
   button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
+    padding: 8px 12px;
     background-color: #4CAF50;
-    color: white;
+    color: #fff;
     border: none;
     cursor: pointer;
   }
   
   button:hover {
     background-color: #45a049;
+  }
+  
+  #filterSection {
+    margin-bottom: 10px;
+  }
+  
+  #expenseList {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  li {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  li:last-child {
+    margin-bottom: 0;
+  }
+  
+  li strong {
+    font-weight: bold;
+  }
+  
+  li button {
+    margin-left: 10px;
+    padding: 5px 10px;
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+  
+  li button:hover {
+    background-color: #d90000;
+  }
+  
+  #summarySection {
+    margin-top: 10px;
+    border-top: 1px solid #ccc;
+    padding-top: 20px;
+  }
+  
+  #expenseTable {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  #expenseTable th,
+  #expenseTable td {
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  #expenseTable th {
+    background-color: #f2f2f2;
+  }
+  
+  #expenseTable td {
+    text-align: center;
+  }
+  
+  #totalExpense {
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-align: left;
+  }
+  
+  @media (max-width: 600px) {
+    #expenseTable {
+      font-size: 14px;
+    }
   }
   
